<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="user_avatar">user avatar</string>
    <string name="location_icon">location icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="globe_icon">globe icon</string>
    <string name="a_propos_de_moi">A propos de moi</string>
    <string name="star">Star</string>
    <string name="return_arrow">Return arrow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="user_avatar_from_url">User avatar</string>
    <string name="address">Address</string>
    <string name="email">email</string>
    <string name="about_me">About me</string>
    <string name="save">Save</string>
    <string name="plus_sign_and_user">plus sign and user</string>
    <string name="trash_can">trash_can</string>
</resources>
